<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_name_display">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="android_developer_course_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="thanks">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email">natalia@manzha.ru</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_failed">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="no_favorites">Ваша медиатека пуста</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="look_for">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="player_error_message">MediaPlayer:\n я ТАКОЕ играть не буду :0(</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_edit_text_hint">Название*</string>
    <string name="description_edit_text_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="cansel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="no_image">Изображение не выбрано</string>
    <string name="on_permission_deny">Плейлист рискует оказаться без обложки))</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="save_failure">Ошибка сохранения плейлиста</string>
    <string name="save_success">создан</string>
    <string name="playlist">Плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_track_to_playlist_success">Добавлено в плейлист</string>
    <string name="add_track_to_playlist_added_yet">Трек уже добавлен в плейлист</string>
    <string name="zero_minutes">0 минут</string>
    <string name="empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="delete_failure">Произошла ошибка удаления</string>
    <string name="no_tracks">В этом плейлисте еще нет треков</string>
</resources>