<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_size_64"
        android:text="@string/settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_marginEnd="@dimen/spacing_12"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout style="@style/SettingsMenuItemStyle">

            <TextView
                style="@style/SettingsMenuItemTextStyle"
                android:text="@string/dark_theme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switcher"
                style="@style/DayNightSwitchStyle" />


        </LinearLayout>

        <LinearLayout style="@style/SettingsMenuItemStyle">

            <TextView
                style="@style/SettingsMenuItemTextStyle"
                android:text="@string/share_app" />

            <ImageView
                android:id="@+id/share_button"
                style="@style/SettingsMenuItemIconStyle"
                android:src="@drawable/share" />


        </LinearLayout>

        <LinearLayout style="@style/SettingsMenuItemStyle">

            <TextView
                style="@style/SettingsMenuItemTextStyle"
                android:text="@string/support" />

            <ImageView
                android:id="@+id/support_button"
                style="@style/SettingsMenuItemIconStyle"
                android:src="@drawable/support" />


        </LinearLayout>

        <LinearLayout style="@style/SettingsMenuItemStyle">

            <TextView
                style="@style/SettingsMenuItemTextStyle"
                android:text="@string/user_agreement" />

            <ImageView
                android:id="@+id/user_agreement_button"
                style="@style/SettingsMenuItemIconStyle"
                android:src="@drawable/arrow_forvard" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>