<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        app:navigationIcon="@drawable/arrow"
        app:title="@string/settings" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/dark_theme"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <androidx.appcompat.widget.SwitchCompat

                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:paddingStart="15dp"
                android:paddingEnd="0dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/share_app"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:layout_width="24dp"

                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/share" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/support" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/user_agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/arrow_forvard" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>