<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brilliant_blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/app_name_display"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="casual"
            android:text="@string/search"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            app:cornerRadius="16dp"
            app:icon="@drawable/magnifier"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="@dimen/icon_size_normal"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/media_library"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="casual"
            android:text="@string/media_library"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            app:cornerRadius="16dp"
            app:icon="@drawable/musical_note"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="@dimen/icon_size_normal"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="casual"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            app:cornerRadius="16dp"
            app:icon="@drawable/cogwheel"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="@dimen/icon_size_normal"
            app:iconTint="@color/black" />

    </LinearLayout>


</LinearLayout>