<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/new_playlist_back_button"
        android:layout_width="@dimen/item_size_48"
        android:layout_height="@dimen/item_size_48"
        android:layout_marginStart="@dimen/spacing_4"
        android:layout_marginTop="@dimen/spacing_4"
        android:padding="@dimen/spacing_12"
        app:icon="@drawable/arrow"
        app:iconSize="@dimen/icon_size_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_size_48"
        android:layout_marginTop="@dimen/spacing_4"
        android:paddingStart="@dimen/spacing_12"
        android:text="@string/new_playlist"
        app:layout_constraintStart_toEndOf="@+id/new_playlist_back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_30"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_back_button">

        <ImageView
            android:id="@+id/new_playlist_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_vector"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/add_icon" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_playlist_name"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_30"
        android:elevation="0dp"
        android:hint="@string/name_edit_text_hint"
        app:layout_constraintTop_toBottomOf="@+id/card"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            style="@style/TextInputEditTextStyle"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_size_56" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_playlist_description"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_16"
        android:hint="@string/description_edit_text_hint"
        app:layout_constraintTop_toBottomOf="@+id/new_playlist_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_size_56" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_size_44"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginBottom="@dimen/spacing_32"
        android:background="@drawable/button_shape"
        android:elevation="0dp"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>