<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_size_64"
        android:text="@string/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_size_36"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginVertical="@dimen/spacing_8"
        android:background="@drawable/shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_12"
        android:paddingEnd="0dp">

        <EditText
            android:id="@+id/input_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_size_32"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:drawableStart="@drawable/magnifier_small"
            android:drawablePadding="@dimen/spacing_8"
            android:drawableTint="?attr/colorOnSurface"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorOnSurface"
            android:textSize="@dimen/text_size_small" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="@dimen/icon_size_40"
            android:layout_height="@dimen/icon_size_36"
            android:layout_gravity="center"
            android:paddingHorizontal="@dimen/spacing_12"
            android:paddingVertical="@dimen/spacing_10"
            android:src="@drawable/baseline_clear_24"
            android:visibility="gone"
            app:tint="?attr/colorOnSurface"
            tools:visibility="visible" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spacing_16">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/item_size_44"
            android:layout_height="@dimen/item_size_44"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_124"
            android:indeterminateTint="@color/brilliant_blue"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracklist_RV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:itemCount="5"
            tools:listitem="@layout/tracklist_element"
            tools:visibility="invisible" />

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="@dimen/icon_size_120"
            android:layout_height="@dimen/icon_size_120"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_78"
            android:visibility="gone"
            tools:src="@drawable/no_internet"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/placeholder_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/placeholder_image"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_16"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnTertiary"
            android:textSize="@dimen/text_size_19"
            android:visibility="gone"
            tools:text="@string/no_internet"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/update_button"
            style="@style/UpdateButtonStyle"
            android:layout_width="@dimen/item_size_90"
            android:layout_height="@dimen/item_size_36"
            android:layout_below="@+id/placeholder_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_134"
            android:text="@string/update"
            android:visibility="gone"
            tools:visibility="invisible" />

        <LinearLayout
            android:id="@+id/search_history_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="34dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_16"
                    android:layout_marginBottom="@dimen/spacing_20"
                    android:fontFamily="@font/ys_display_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/look_for"
                    android:textColor="?attr/colorOnTertiary"
                    android:textSize="@dimen/text_size_19" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_history_RV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    tools:itemCount="10"
                    tools:listitem="@layout/tracklist_element" />

                <Button
                    android:id="@+id/clear_history_button"
                    style="@style/UpdateButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_size_36"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="@dimen/spacing_24"
                    android:includeFontPadding="false"
                    android:paddingStart="@dimen/spacing_14"
                    android:paddingEnd="@dimen/spacing_14"
                    android:text="@string/clear_history" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>





